--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:P1xt/react-speedrun.git",
-  "author": "P1xt <kjphpdev@gmail.com>",
-  "license": "MIT"
+  "author": "P1xt <p1xtcode@gmail.com>",
+  "license": "Unlicense",
+  "dependencies": {
+    "concurrently": "^3.5.0",
+    "rimraf": "^2.6.1"
+  },
+  "engines": {
+    "node": "8.4.0"
+  },
+  "scripts": {
+    "build": "concurrently \"cd client && yarn build\" \"cd server && yarn build\"",
+    "clean": "concurrently \"rimraf node_modules\" \"cd client && rimraf node_modules build\" \"cd server && rimraf node_modules build\"",
+    "heroku-postbuild": "yarn build",
+    "install": "(cd client && yarn) && (cd server && yarn)",
+    "start": "concurrently \"cd client && PORT=3000 yarn start\" \"cd server && PORT=3001 yarn start\"",
+    "start:prod": "cd server && yarn start:prod"
+  }
 }
