--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-register": "^6.26.0",
