--- a/client/.babelrc
+++ b/client/.babelrc
@@ -11,6 +11,7 @@
   "plugins": [
     "react-hot-loader/babel",
     "babel-plugin-transform-object-rest-spread",
+    "syntax-async-functions",  
     [
       "transform-class-properties",
       {
