--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,18 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -28,19 +40,9 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-icons": "^2.2.5",
     "react-router-dom": "^4.2.2",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "node-sass": "^4.5.3",
-    "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.5.6"
   }
 }
